--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 alembic==1.8.1
 aniso8601==9.0.1
 click==8.1.3
-Flask==2.2.2
+Flask==2.2.1
+Flask-Auth==0.85
+Flask-HTTPAuth==4.7.0
 Flask-Migrate==3.1.0
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
@@ -10,9 +12,14 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.1
 MarkupSafe==2.1.1
+marshmallow==3.17.0
+marshmallow-enum==1.5.1
+packaging==21.3
 psycopg2-binary==2.9.3
+PyJWT==2.4.0
+pyparsing==3.0.9
 python-decouple==3.6
-pytz==2022.2.1
+pytz==2022.1
 six==1.16.0
-SQLAlchemy==1.4.40
-Werkzeug==2.2.2
+SQLAlchemy==1.4.39
+Werkzeug==2.2.1
