--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
 alembic==1.8.1
 aniso8601==9.0.1
+attrs==22.1.0
+cffi==1.15.1
 click==8.1.3
+cryptography==37.0.4
+factory-boy==3.2.1
+Faker==14.0.0
 Flask==2.2.1
 Flask-Auth==0.85
 Flask-HTTPAuth==4.7.0
 Flask-Migrate==3.1.0
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
+Flask-Testing==0.8.1
 greenlet==1.1.2
+iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.1
@@ -15,11 +22,18 @@ MarkupSafe==2.1.1
 marshmallow==3.17.0
 marshmallow-enum==1.5.1
 packaging==21.3
+password-strength==0.0.3.post2
+pluggy==1.0.0
 psycopg2-binary==2.9.3
+py==1.11.0
+pycparser==2.21
 PyJWT==2.4.0
 pyparsing==3.0.9
+pytest==7.1.2
+python-dateutil==2.8.2
 python-decouple==3.6
 pytz==2022.1
 six==1.16.0
 SQLAlchemy==1.4.39
+tomli==2.0.1
 Werkzeug==2.2.1
